<resources>
    <string name="app_name">Squirrel</string>
    <string name="running"> </string>

    <string name="settings">Settings</string>
    <string name="iconOffset">Icon Offset</string>
    <string name="touch">Touch</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="right">Right Key</string>
    <string name="left">Left Key</string>
    <string name="pointer">Pointer</string>
    <string name="wheel">Scroll Wheel</string>
    <string name="pointerSpeed">Pointer Speed</string>
    <string name="movingDistance">Mouse wheel movement distance</string>
    <string name="fullScreen">Full\nScreen</string>
    <string name="symbol">Symbol</string>
    <string name="xMapping">left right movement mapping</string>
    <string name="yMapping">up down movement mapping</string>
    <string name="invert">Invert</string>
    <string name="reset">Reset</string>
    <string name="keyMsg">keyboard status</string>
    <string name="xAxis">X Axis</string>
    <string name="yAxis">Y Axis</string>
    <string name="zAxis">Z Axis</string>
    <string name="listDataSize">Data point count in the line chart</string>
    <string name="retransmission">Retransmission</string>

    <string name="wifiConnected">WiFi not connected</string>
    <string name="invalidIP">Invalid local IP address</string>

    <string name="connectedOK">Connected service is: </string>
    <string name="connectedErr">Unable to connect to the server</string>
    <string name="longKey">Enable long press</string>

    <string name="screenLock">Do not auto lock the screen</string>
    <string name="noService">No service devices found on the network</string>
    <string name="noHost">USB interface is not connected to the host.</string>

    <string name="networkStatus">Network Status</string>
    <string name="failedEnqueue"> Failed to enqueue the data</string>


    <string name="gyroscopeThreshold">Gyroscope Threshold</string>

    <string name="connected">Network Connected</string>
    <string name="mobileData">Mobile Data</string>
    <string name="ipList">IP Lists</string>

    <string name="success">Connected to service successfully</string>
    <string name="fail">Failed to connect to service</string>

    <string name="macro">Macro</string>
    <string name="add">Add</string>
    <string name="addName">Create a new SQL table name</string>
    <string name="invalid">Invalid table name: It must start with a letter or Chinese character, and cannot contain special characters or SQL keywords.</string>
    <string name="select">Please select the table name to operate on</string>
    <string name="enterContent">Please enter content</string>
    <string name="delete">Delete</string>
    <string name="deleteName">Delete SQL table name</string>
    <string name="sendName">Send SQL table name</string>
    <string name="record">Record</string>
    <string name="send">Send</string>
    <string name="execute">Execute</string>
    <string name="cancel">Cancel</string>
    <string name="nameList">Names Lists</string>
    <string name="sendSpeed">Send Speed</string>
    <string name="sendCount">Send Count</string>
    <string name="completion">Completion</string>


    <string name="playUrl">Play URL</string>
    <string name="url">URI: </string>
    <string name="refresh">Refresh</string>
    <string name="username">Device login username</string>
    <string name="password">Device login password</string>
    <string name="hideWeb">HideWeb</string>
    <string name="deviceTime">Device Time</string>
    <string name="mobileTime">Mobile Time</string>
    <string name="timeSync">Sync Time</string>


    <string name="inputUrl">Please enter the video address.</string>



</resources>