<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mouse_h_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"  />
    <RelativeLayout
        android:id="@+id/touch_zone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/styles_frame"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/mouse_h_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/mouse_touch_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointer"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true" />

        <ImageView
            android:id="@+id/mouse_touch_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/mouse_h_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/mouse_touch_left"
            style = "@style/LinearLayoutBottom"
            android:text="@string/left"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/mouse_touch_right"
            style = "@style/LinearLayoutBottom"
            android:text="@string/right"
            android:layout_weight="1"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>