<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/custom_scrollbar_vertical"
    android:scrollbarSize="3dp"
    android:fadeScrollbars="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            >
            <TextView
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/deleteName"
                />

            <TextView
                android:padding="20dp"
                android:id="@+id/macro_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:padding="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/macro_delete_cancel"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/keyboard_win_styles_buttons"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/cancel"
                    />

                <Button
                    android:id="@+id/macro_delete_execute"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/keyboard_win_styles_buttons"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/execute"
                    />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
