<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/custom_scrollbar_vertical"
    android:scrollbarSize="3dp"
    android:fadeScrollbars="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            >

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/styles_frame"
            android:orientation="vertical">
            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/deviceTime"
                />

            <TextView
                android:padding="10dp"
                android:id="@+id/deviceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/mobileTime"
                />

            <TextView
                android:padding="10dp"
                android:id="@+id/mobileTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:padding="10dp"
                android:id="@+id/timeSync"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_win_styles_buttons"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/timeSync"/>

        </LinearLayout>




        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
